--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -3,4 +3,15 @@
     <string name="swap_languages">swap languages</string>
     <string name="close">close</string>
     <string name="open">open</string>
+    <string name="enter_a_text_to_translate">enter a text to translate</string>
+    <string name="translate">translate</string>
+    <string name="copy">copy</string>
+    <string name="play_loud">play loud</string>
+    <string name="copied_to_clipboard">copied to clipboard</string>
+    <string name="history">history</string>
+    <string name="error_service_unavailable">Oops! Our service isn\'t working at the moment. Try again later.</string>
+    <string name="error_service_error">Oops! Our service isn\'t working at the moment. Try again later.</string>
+    <string name="error_client_error">Oops! It seems that we\'re not able to process your request. Try again later.</string>
+    <string name="error_unknown">Oops! Something went wrong. Try again later.</string>
+    <string name="record_audio">record audio</string>
 </resources>
